changed page layout

--- a/src/pages/Editor.css
+++ b/src/pages/Editor.css
@@ -1,9 +1,3 @@
-.main-editor {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
 .html-panel {
   display: flex;
   flex-direction: column;
@@ -20,9 +14,19 @@
 /* A4 page */
 .preview-iframe {
   border: 0.5px solid #ccc;
+  padding: 10mm;
+  /* default page size */
   height: 297mm;
   width: 210mm;
-  padding: 10mm;
+}
+
+.preview-iframe[orientation="Portrait"] {
+  height: 297mm;
+  width: 210mm;
+}
+.preview-iframe[orientation="Landscape"] {
+  width: 297mm !important;
+  height: 210mm !important;
 }
 
 .header-input textarea {
@@ -53,7 +57,7 @@
 }
 
 .preview-panel {
-  /* margin: auto; */
+  margin: auto;
   /* height: 65%; */
   /* flex: 1; */
   /* padding: 20px; */
